<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/btn_single_expansible_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_expansible_card"
        app:layout_constraintBottom_toTopOf="@id/btn_multiple_expansible_cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_multiple_expansible_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiple_expansible_cards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_single_expansible_card" />

    <Button
        android:id="@+id/btn_pagination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pagination"
        app:layout_constraintBottom_toTopOf="@id/btn_permission_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_multiple_expansible_cards" />

    <Button
        android:id="@+id/btn_permission_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_multiple_expansible_cards" />

</androidx.constraintlayout.widget.ConstraintLayout>