<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpandableCardFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_expandable_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:contentPadding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/title_goes_here" />

            <TextView
                android:id="@+id/tv_subtitle"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_alignStart="@id/tv_title"
                android:text="@string/subtitle_goes_here" />

            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignTop="@id/tv_title"
                android:layout_alignBottom="@id/tv_subtitle"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/expandable_arrow_indicator"
                android:padding="8dp"
                android:src="@drawable/ic_keyboard_arrow_up" />

            <LinearLayout
                android:id="@+id/ll_expandable_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_subtitle"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_body_1"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum_45_words" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>